feat: add account profile tab
